correct indentation and add a link

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,15 +5,16 @@
     </head>
     <body>
         <h1>My first web page</h>
-        <h2>Written with the guidance of Moringa Prep</h2>
-        <p>This is my first web page!</p>
+        <h2>Written with the guidance of<em>Moringa Prep</em></h2>
+        <p>This is my <strong>first web page</strong>!</p>
         <p>Isn't it nice?</p>
         <p>Here are some things I'm going to learn about coding</p>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>And a lot more!</li>
-      </ul>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>And a lot more!</li>
+          </ul>
+        <p>Check out <a href="http://www.moringaschool.com/">Moringa School</a>. It's a great school for learning web programming!</p>
     </body>
 </html>
