add a picture to the page

--- a/favourite-things.html
+++ b/favourite-things.html
@@ -7,6 +7,7 @@
         <h1>My favorite things</h1>
         <h2>These are a few of my favorite things.</h2>
         <h3>People</h3>
+        <img src="/home/silvia/my-first-webpage/people.jpg" alt="A picture of some of the people I love"
         <p>Here are some of my favorite people!</p>
         <ul>
           <li>My brother Christopher</li>
