add more images and a link to the page

--- a/favourite-things.html
+++ b/favourite-things.html
@@ -11,13 +11,18 @@
         <p>Here are some of my favorite people!</p>
         <ul>
           <li>My brother Christopher</li>
+          <img src="/home/silvia/my-first-webpage/parents.jpg" alt="A picture of My parents"
           <li>My mom and dad:
             <ul>
               <li>Steve</li>
               <li>Chepng'etich</li>
             </ul>
           </li>
+          <img src="/home/silvia/my-first-webpage/Nkatha.jpg" alt="A picture of my friend"
+
           <li>My friend Nkatha</li>
+          <img src="/home/silvia/my-first-webpage/kamau.jpg" alt="A picture of my friend"
+
           <li>My friend Kamau</li>
         </ul>
 
@@ -28,7 +33,7 @@
         <li>Malted milk chocolate</li>
         <li>Black licorice</li>
       </ol>
-
+      <p>Check out <a href="https://au.pinterest.com/pin/741123682399726710/">Ice cream favorite</a>. It's amazing!</p>
       <p>Thanks for reading about me!</p>
     </body>
 </html>
