--- a/favourite-things.html
+++ b/favourite-things.html
@@ -7,10 +7,14 @@
         <h1>My favorite things</h1>
         <h2>These are a few of my favorite things.</h2>
         <h3>People</h3>
-        <img src="/home/silvia/my-first-webpage/people.jpg" alt="A picture of some of the people I love"
         <p>Here are some of my favorite people!</p>
         <ul>
+
+
+          <img src="/home/silvia/my-first-webpage/christopher.jpg" alt="A picture of my brother"
           <li>My brother Christopher</li>
+
+
           <img src="/home/silvia/my-first-webpage/parents.jpg" alt="A picture of My parents"
           <li>My mom and dad:
             <ul>
@@ -33,6 +37,7 @@
         <li>Malted milk chocolate</li>
         <li>Black licorice</li>
       </ol>
+      <p>Check out <a href="https://au.pinterest.com/pin/373235887852970880/">My favourite ball gown</a>.</p>
       <p>Check out <a href="https://au.pinterest.com/pin/741123682399726710/">Ice cream favorite</a>. It's amazing!</p>
       <p>Thanks for reading about me!</p>
     </body>
