--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link href="css/style.css" rel="stylesheet" type="text/css">
         <title>Web page #1</title>
     </head>
     <body>
         <h1>My first web page</h>
-        <h2>Written with the guidance of<em>Moringa Prep</em></h2>
+      <h2>Written with the guidance of <em>Moringa Prep</em></h2>
         <p>This is my <strong>first web page</strong>!</p>
         <p>Isn't it nice?</p>
         <p>Here are some things I'm going to learn about coding</p>
