add css styling to the page

--- a/favourite-things.html
+++ b/favourite-things.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
         <title>Michael's favorite things</title>
     </head>
     <body>
@@ -9,25 +10,22 @@
         <h3>People</h3>
         <p>Here are some of my favorite people!</p>
         <ul>
-
-
-          <img src="/home/silvia/my-first-webpage/christopher.jpg" alt="A picture of my brother"
           <li>My brother Christopher</li>
+        <img src="/home/silvia/my-first-webpage/images/christopher.jpg" alt="A picture of my brother"
 
-
-          <img src="/home/silvia/my-first-webpage/parents.jpg" alt="A picture of My parents"
-          <li>My mom and dad:
+          <p><li>My mom and dad:</p>
+        <p><img src="/home/silvia/my-first-webpage/images/parents.jpg" alt="A picture of My parents"</p>
             <ul>
               <li>Steve</li>
               <li>Chepng'etich</li>
             </ul>
           </li>
-          <img src="/home/silvia/my-first-webpage/Nkatha.jpg" alt="A picture of my friend"
 
           <li>My friend Nkatha</li>
-          <img src="/home/silvia/my-first-webpage/kamau.jpg" alt="A picture of my friend"
+      <p><img src="/home/silvia/my-first-webpage/images/Nkatha.jpg" alt="A picture of my friend"</p>
 
           <li>My friend Kamau</li>
+        <p><img src="/home/silvia/my-first-webpage/images/kamau.jpg" alt="A picture of my friend"</p>
         </ul>
 
       <h3>Flavours of ice  cream</h3>
